[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprites/OP.aseprite" type="SpriteFrames" id=1]
[ext_resource path="res://Scripts/IntroLoopAnimatedSprite.gd" type="Script" id=2]
[ext_resource path="res://Scripts/MainScene.gd" type="Script" id=3]
[ext_resource path="res://Assets/Audio/loop.mp3" type="AudioStream" id=4]
[ext_resource path="res://Assets/Audio/LogoDrop.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Audio/MMConfirm.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sprites/Start.aseprite" type="SpriteFrames" id=7]

[node name="MainScene" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
frames = ExtResource( 1 )
animation = "Intro"
centered = false
script = ExtResource( 2 )

[node name="StartAnim" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 4, 4 )
frames = ExtResource( 7 )
centered = false

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 5.0

[node name="Start" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="LogoDrop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="animation_finished" from="AnimatedSprite" to="AnimatedSprite" method="_on_AnimatedSprite_animation_finished"]
[connection signal="finished" from="Start" to="." method="_on_Start_finished"]
[connection signal="finished" from="LogoDrop" to="." method="_on_LogoDrop_finished"]
